--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en" class="">
     <head>
         <meta charset="utf-8" />
         <title>MealPlanner</title>
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
     </head>
-    <body class="bg-white dark:bg-gray-700">
+    <body class="bg-white dark:bg-gray-900">
         <app-root></app-root>
     </body>
 </html>
